--- a/NodeDocker/config.toml
+++ b/NodeDocker/config.toml
@@ -2,9 +2,7 @@
 # Configs have a mapping between the Docker image to use and the capabilities that need to be matched to
 # start a container with the given image.
 configs = [
-    "selenium/standalone-firefox:4.6.0-20221104", "{\"browserName\": \"firefox\"}",
-    "selenium/standalone-chrome:4.6.0-20221104", "{\"browserName\": \"chrome\"}",
-    "selenium/standalone-edge:4.6.0-20221104", "{\"browserName\": \"MicrosoftEdge\"}"
+    "selenium/standalone-chrome:4.6.0-20221104", "{\"browserName\": \"chrome\"}"
     ]
 
 # URL for connecting to the docker daemon
